# advent-of-code

./: .gitignore  Cargo.toml
.cargo/: config.toml
aoc-shared/: Cargo.toml
aoc-shared/src/: array_window.rs  atoi.rs  dijkstra.rs  flat2d.rs  lib.rs  minheap.rs  pop_if.rs  rot.rs  tokenizer.rs
contrib/templates/: 20YY-DD.rs  grid-20YY-DD.rs  regex-20YY-DD.rs
contrib/util/: AoC  pgm-view
util/: AoC
y2015/: Cargo.toml
y2015/challenges/: 01
y2015/input/: 24.example
y2019/: Cargo.toml
y2019/input/: 05.debug
y2019/src/: intcode.rs
y2020/: .eslintrc.json  Cargo.toml  jsconfig.json
y2020/1/: index.js
y2020/2/: index.js
y2020/3/: index.js
y2020/4/: index.js
y2020/5/: bigboy-gen.c  index.js
y2020/6/: index.js
y2020/7/: index.js
y2020/8/: index.js
y2020/js/9/: index.js
y2020/lib/: read-input.js
y2021/: Cargo.toml
y2021/input/: day05.big.txt
y2021/src/: lib.rs
y2022/: .gitignore  Cargo.toml
y2022/contrib/templates/: dayXX.rs
y2022/src/: lib.rs
y2023/: Cargo.toml
y2023/input/: 25.todot.bash
y2024/: Cargo.toml
y2024/bonus/: 2024-02.ua
y2024/input/: 18  20  21  24  24.fixed
y2025/: Cargo.toml
y2025/input/: 12
