[package]
name = "y2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-shared = { path = "../aoc-shared" }
bitvec = "1.0.1"
itertools = "0.12"
itoa = "1.0.9"
nom = "7.1.3"
num = "0.4.1"
z3 = { version = "0.12.1", features = ["static-link-z3"] }
